# freshfetch

./: .gitignore  Cargo.toml  build.rs
src/: art.rs  assets.rs  cli.rs  errors.rs  info.rs  layout.rs  main.rs  misc.rs
src/assets/: ascii_art.rs  defaults.rs
src/info/: context.rs  cpu.rs  de.rs  distro.rs  gpu.rs  host.rs  kernel.rs  memory.rs  motherboard.rs  package_managers.rs  resolution.rs  shell.rs  uptime.rs  utils.rs  wm.rs
src/utils/: which.rs
